target/generated-sources/antlr4/be/unamur/info/b314/compiler/EMJParser.java
// Generated from be/unamur/info/b314/compiler/EMJParser.g4 by ANTLR 4.9.3
package be.unamur.info.b314.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EMJParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, COMMENT=2, LOUD_SPEAKER=3, SPEAKER_HIGH_VOLUME=4, SPEAKER_LOW_VOLUME=5, 
		CARTE=6, POLICE=7, HOUSES=8, MOTORWAY=9, VOLCANO=10, CONSTRUCTION=11, 
		TRACTOR=12, WAVES=13, HAUTARROW=14, DROITEARROW=15, BASARROW=16, GAUCHEARROW=17, 
		VILLAIN=18, CONNECTOR=19, COMPARATOR=20, IF=21, ELSE=22, POINTDOWN=23, 
		INFINIE=24, REPEATBOUTON=25, RETURN=26, VOID=27, ALARME=28, RADIO=29, 
		HANDRAISED=30, INTEGER_EMOJI=31, CHAR_EMOJI=32, STRING_EMOJI=33, BOOL_EMOJI=34, 
		ZERO=35, UN=36, EMOJI_TUPLE_OF=37, IMPORT=38, MAIN=39, TRUE=40, FALSE=41, 
		WITH=42, LPAR=43, RPAR=44, BRACKET1=45, BRACKET2=46, LCURLBRACKET=47, 
		RCURLBRACKET=48, ENTREQUOTE=49, QUOTE=50, POINT=51, MAP=52, COMMA=53, 
		PLUS=54, MINUS=55, MULT=56, DIV=57, EQUAL=58, ENDSTATEMENT=59, NON=60, 
		INTEGER=61, NUMBER=62, CHAR=63, STRING=64, MOTS=65, ID=66, EMOJIES=67, 
		EMOJIS=68, NEWLINE=69, WS=70;
	public static final int
		RULE_root = 0, RULE_program = 1, RULE_imports = 2, RULE_main = 3, RULE_nom_fichier = 4, 
		RULE_map = 5, RULE_element_carte = 6, RULE_instruction = 7, RULE_affectInstr = 8, 
		RULE_ifInstr = 9, RULE_elseInstr = 10, RULE_loopInstr = 11, RULE_preFunc = 12, 
		RULE_tuple = 13, RULE_rightExp = 14, RULE_rightExpB = 15, RULE_bool = 16, 
		RULE_leftExp = 17, RULE_callFunc = 18, RULE_callFuncArgs = 19, RULE_callFuncArg = 20, 
		RULE_intExpr = 21, RULE_boolExp = 22, RULE_funcDecl = 23, RULE_funcType = 24, 
		RULE_funcParams = 25, RULE_funcParamsNotEmpty = 26, RULE_instructions = 27, 
		RULE_funcReturn = 28, RULE_variableExprEmoji = 29, RULE_type = 30, RULE_type_emo = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "program", "imports", "main", "nom_fichier", "map", "element_carte", 
			"instruction", "affectInstr", "ifInstr", "elseInstr", "loopInstr", "preFunc", 
			"tuple", "rightExp", "rightExpB", "bool", "leftExp", "callFunc", "callFuncArgs", 
			"callFuncArg", "intExpr", "boolExp", "funcDecl", "funcType", "funcParams", 
			"funcParamsNotEmpty", "instructions", "funcReturn", "variableExprEmoji", 
			"type", "type_emo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'\uD83D\uDCE2'", "'\uD83D\uDD0A'", "'\uD83D\uDD08'", 
			null, "'\uD83D\uDE94'", null, null, "'\uD83C\uDF0B'", "'\uD83D\uDEA7'", 
			"'\uD83D\uDE9C'", "'\uD83C\uDF0A'", null, null, null, null, "'\uD83E\uDDB9'", 
			null, null, "'\uD83E\uDD14'", "'\uD83E\uDD28'", "'\uD83D\uDC47'", null, 
			"'\uD83D\uDD01'", null, "'\uD83C\uDF00'", "'\uD83D\uDEA8'", "'\uD83D\uDCFB'", 
			"'\u270B'", "'\uD83D\uDD22'", "'\uD83D\uDD23'", "'\uD83D\uDD21'", "'\uD83D\uDD1F'", 
			null, null, "'\uD83D\uDC65'", "'\uD83D\uDCE6'", "'\uD83C\uDFE0'", "'\u2705'", 
			"'\u274C'", "'with'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'\"'", 
			"'''", "'.'", "'map'", "','", "'+'", "'-'", "'*'", "'/'", "'='", "';'", 
			"'\u26D4'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "COMMENT", "LOUD_SPEAKER", "SPEAKER_HIGH_VOLUME", 
			"SPEAKER_LOW_VOLUME", "CARTE", "POLICE", "HOUSES", "MOTORWAY", "VOLCANO", 
			"CONSTRUCTION", "TRACTOR", "WAVES", "HAUTARROW", "DROITEARROW", "BASARROW", 
			"GAUCHEARROW", "VILLAIN", "CONNECTOR", "COMPARATOR", "IF", "ELSE", "POINTDOWN", 
			"INFINIE", "REPEATBOUTON", "RETURN", "VOID", "ALARME", "RADIO", "HANDRAISED", 
			"INTEGER_EMOJI", "CHAR_EMOJI", "STRING_EMOJI", "BOOL_EMOJI", "ZERO", 
			"UN", "EMOJI_TUPLE_OF", "IMPORT", "MAIN", "TRUE", "FALSE", "WITH", "LPAR", 
			"RPAR", "BRACKET1", "BRACKET2", "LCURLBRACKET", "RCURLBRACKET", "ENTREQUOTE", 
			"QUOTE", "POINT", "MAP", "COMMA", "PLUS", "MINUS", "MULT", "DIV", "EQUAL", 
			"ENDSTATEMENT", "NON", "INTEGER", "NUMBER", "CHAR", "STRING", "MOTS", 
			"ID", "EMOJIES", "EMOJIS", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EMJParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EMJParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(EMJParser.EOF, 0); }
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
			case IMPORT:
				{
				setState(64);
				program();
				}
				break;
			case LINE_COMMENT:
			case CARTE:
				{
				setState(65);
				map();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(70);
				imports();
				}
			}

			setState(73);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(EMJParser.IMPORT, 0); }
		public Nom_fichierContext nom_fichier() {
			return getRuleContext(Nom_fichierContext.class,0);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_imports);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(IMPORT);
			setState(76);
			nom_fichier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public List<TerminalNode> VOID() { return getTokens(EMJParser.VOID); }
		public TerminalNode VOID(int i) {
			return getToken(EMJParser.VOID, i);
		}
		public TerminalNode MAIN() { return getToken(EMJParser.MAIN, 0); }
		public TerminalNode LPAR() { return getToken(EMJParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(EMJParser.RPAR, 0); }
		public TerminalNode LCURLBRACKET() { return getToken(EMJParser.LCURLBRACKET, 0); }
		public TerminalNode RCURLBRACKET() { return getToken(EMJParser.RCURLBRACKET, 0); }
		public List<FuncDeclContext> funcDecl() {
			return getRuleContexts(FuncDeclContext.class);
		}
		public FuncDeclContext funcDecl(int i) {
			return getRuleContext(FuncDeclContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public TerminalNode RETURN() { return getToken(EMJParser.RETURN, 0); }
		public TerminalNode ENDSTATEMENT() { return getToken(EMJParser.ENDSTATEMENT, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(78);
			match(VOID);
			setState(79);
			match(MAIN);
			setState(80);
			match(LPAR);
			setState(81);
			match(RPAR);
			setState(82);
			match(LCURLBRACKET);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 14)) & ~0x3f) == 0 && ((1L << (_la - 14)) & ((1L << (HAUTARROW - 14)) | (1L << (DROITEARROW - 14)) | (1L << (BASARROW - 14)) | (1L << (GAUCHEARROW - 14)) | (1L << (IF - 14)) | (1L << (INFINIE - 14)) | (1L << (REPEATBOUTON - 14)) | (1L << (ALARME - 14)) | (1L << (RADIO - 14)) | (1L << (HANDRAISED - 14)) | (1L << (INTEGER_EMOJI - 14)) | (1L << (CHAR_EMOJI - 14)) | (1L << (STRING_EMOJI - 14)) | (1L << (BOOL_EMOJI - 14)) | (1L << (EMOJI_TUPLE_OF - 14)) | (1L << (ID - 14)))) != 0)) {
				{
				{
				setState(83);
				instruction();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(89);
				match(RETURN);
				setState(90);
				match(VOID);
				setState(91);
				match(ENDSTATEMENT);
				}
			}

			setState(94);
			match(RCURLBRACKET);
			}
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << INTEGER_EMOJI) | (1L << CHAR_EMOJI) | (1L << STRING_EMOJI) | (1L << BOOL_EMOJI) | (1L << EMOJI_TUPLE_OF))) != 0)) {
				{
				{
				setState(96);
				funcDecl();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nom_fichierContext extends ParserRuleContext {
		public List<TerminalNode> ENTREQUOTE() { return getTokens(EMJParser.ENTREQUOTE); }
		public TerminalNode ENTREQUOTE(int i) {
			return getToken(EMJParser.ENTREQUOTE, i);
		}
		public TerminalNode MOTS() { return getToken(EMJParser.MOTS, 0); }
		public TerminalNode POINT() { return getToken(EMJParser.POINT, 0); }
		public TerminalNode MAP() { return getToken(EMJParser.MAP, 0); }
		public Nom_fichierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nom_fichier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterNom_fichier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitNom_fichier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitNom_fichier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nom_fichierContext nom_fichier() throws RecognitionException {
		Nom_fichierContext _localctx = new Nom_fichierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nom_fichier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ENTREQUOTE);
			setState(103);
			match(MOTS);
			setState(104);
			match(POINT);
			setState(105);
			match(MAP);
			setState(106);
			match(ENTREQUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapContext extends ParserRuleContext {
		public TerminalNode CARTE() { return getToken(EMJParser.CARTE, 0); }
		public TerminalNode WITH() { return getToken(EMJParser.WITH, 0); }
		public List<TerminalNode> INTEGER() { return getTokens(EMJParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(EMJParser.INTEGER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EMJParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EMJParser.COMMA, i);
		}
		public TerminalNode ENDSTATEMENT() { return getToken(EMJParser.ENDSTATEMENT, 0); }
		public TerminalNode HAUTARROW() { return getToken(EMJParser.HAUTARROW, 0); }
		public TerminalNode DROITEARROW() { return getToken(EMJParser.DROITEARROW, 0); }
		public TerminalNode BASARROW() { return getToken(EMJParser.BASARROW, 0); }
		public TerminalNode GAUCHEARROW() { return getToken(EMJParser.GAUCHEARROW, 0); }
		public List<TerminalNode> LINE_COMMENT() { return getTokens(EMJParser.LINE_COMMENT); }
		public TerminalNode LINE_COMMENT(int i) {
			return getToken(EMJParser.LINE_COMMENT, i);
		}
		public List<Element_carteContext> element_carte() {
			return getRuleContexts(Element_carteContext.class);
		}
		public Element_carteContext element_carte(int i) {
			return getRuleContext(Element_carteContext.class,i);
		}
		public MapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterMap(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitMap(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitMap(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MapContext map() throws RecognitionException {
		MapContext _localctx = new MapContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_map);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LINE_COMMENT) {
				{
				{
				setState(108);
				match(LINE_COMMENT);
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(CARTE);
			setState(115);
			match(WITH);
			setState(116);
			match(INTEGER);
			setState(117);
			match(COMMA);
			setState(118);
			match(INTEGER);
			setState(119);
			match(COMMA);
			setState(120);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HAUTARROW) | (1L << DROITEARROW) | (1L << BASARROW) | (1L << GAUCHEARROW))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(121);
			match(ENDSTATEMENT);
			{
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				element_carte();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CARTE) | (1L << POLICE) | (1L << HOUSES) | (1L << MOTORWAY) | (1L << VOLCANO) | (1L << CONSTRUCTION) | (1L << TRACTOR) | (1L << WAVES) | (1L << VILLAIN))) != 0) );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Element_carteContext extends ParserRuleContext {
		public TerminalNode MOTORWAY() { return getToken(EMJParser.MOTORWAY, 0); }
		public TerminalNode POLICE() { return getToken(EMJParser.POLICE, 0); }
		public TerminalNode HOUSES() { return getToken(EMJParser.HOUSES, 0); }
		public TerminalNode CARTE() { return getToken(EMJParser.CARTE, 0); }
		public TerminalNode VOLCANO() { return getToken(EMJParser.VOLCANO, 0); }
		public TerminalNode CONSTRUCTION() { return getToken(EMJParser.CONSTRUCTION, 0); }
		public TerminalNode WAVES() { return getToken(EMJParser.WAVES, 0); }
		public TerminalNode VILLAIN() { return getToken(EMJParser.VILLAIN, 0); }
		public TerminalNode TRACTOR() { return getToken(EMJParser.TRACTOR, 0); }
		public Element_carteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element_carte; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterElement_carte(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitElement_carte(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitElement_carte(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Element_carteContext element_carte() throws RecognitionException {
		Element_carteContext _localctx = new Element_carteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_element_carte);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CARTE) | (1L << POLICE) | (1L << HOUSES) | (1L << MOTORWAY) | (1L << VOLCANO) | (1L << CONSTRUCTION) | (1L << TRACTOR) | (1L << WAVES) | (1L << VILLAIN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public IfInstrContext ifInstr() {
			return getRuleContext(IfInstrContext.class,0);
		}
		public LoopInstrContext loopInstr() {
			return getRuleContext(LoopInstrContext.class,0);
		}
		public PreFuncContext preFunc() {
			return getRuleContext(PreFuncContext.class,0);
		}
		public TerminalNode ENDSTATEMENT() { return getToken(EMJParser.ENDSTATEMENT, 0); }
		public AffectInstrContext affectInstr() {
			return getRuleContext(AffectInstrContext.class,0);
		}
		public VariableExprEmojiContext variableExprEmoji() {
			return getRuleContext(VariableExprEmojiContext.class,0);
		}
		public CallFuncContext callFunc() {
			return getRuleContext(CallFuncContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instruction);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				ifInstr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				loopInstr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				preFunc();
				setState(132);
				match(ENDSTATEMENT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				affectInstr();
				setState(135);
				match(ENDSTATEMENT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				variableExprEmoji();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				callFunc();
				setState(139);
				match(ENDSTATEMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectInstrContext extends ParserRuleContext {
		public LeftExpContext leftExp() {
			return getRuleContext(LeftExpContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(EMJParser.EQUAL, 0); }
		public RightExpContext rightExp() {
			return getRuleContext(RightExpContext.class,0);
		}
		public AffectInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affectInstr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).enterAffectInstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EMJParserListener ) ((EMJParserListener)listener).exitAffectInstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EMJParserVisitor ) return ((EMJParserVisitor<? extends T>)visitor).visitAffectInstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectInstrContext affectInstr() throws RecognitionException {
		AffectInstrContext _localctx = new AffectInstrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_affectInstr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			leftExp();
			setState(144);
			match(EQUAL);
			setState(145);
			rightExp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
